<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Home">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_title_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_home"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_home">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_camera_alt_24" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_camera_alt_24"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_camera_alt_24"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_camera_alt_24"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_1"
        android:layout_width="336dp"
        android:layout_height="243dp"
        android:layout_marginBottom="344dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardview_card_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_cardview_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/image_container1"
            app:layout_constraintHeight_percent="0.55"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"/>

        <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_cardview_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_cardview_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_cardview_1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_cardview_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_cardview_1"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:textSize="25dp"


            />




    </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview_2"
        android:layout_width="336dp"
        android:layout_height="243dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview_1"
        app:layout_constraintVertical_bias="0.120000005">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardview_card_root2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_cardview_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_container2"
                app:layout_constraintHeight_percent="0.55"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_cardview_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/title_cardview_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_cardview_2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/subtitle_cardview_2"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_cardview_2"


                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

   </androidx.constraintlayout.widget.ConstraintLayout>